# eduboardgames

./: README.md
backend/: main.py  pyproject.toml
backend/blackjack/: README.md  __init__.py  router.py
backend/src/blackjack/: __init__.py  logic.py  router.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/games/: BlackJack.jsx
